added model owner uuid support
