# project-api/2025/1project-model-ownership/project-api/project_api/utils/vespucci_to_controller_model_converters.py
@@ -136,7 +136,8 @@ def convert_model(model: VespucciModel) -> APIModel:
         model_training=convert_training(model.training),
         data_sufficiency=convert_training(model.data_sufficiency),
         creation_time=model.creation_time,
-        last_update_time=model.last_update_time
+        last_update_time=model.last_update_time,
+        model_owner_uuid=model.model_owner_uuid
     )
 
     return api_model
